[package]
name = "actix-limitation"
version = "0.5.1"
authors = [
    "0xmad <0xmad@users.noreply.github.com>",
    "Rob Ede <robjtede@icloud.com>",
]
description = "Rate limiter using a fixed window counter for arbitrary keys, backed by Redis for Actix Web"
keywords = ["actix-web", "rate-api", "rate-limit", "limitation"]
categories = ["asynchronous", "web-programming"]
repository = "https://github.com/actix/actix-extras"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = ["session", "redis-limiter"]
session = ["actix-session"]
redis-limiter = ["redis"]

[dependencies]
actix-utils = "3"
actix-web = { version = "4", default-features = false, features = ["cookies"] }

chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
derive_more = { version = "1", features = ["display", "error", "from"] }
log = "0.4"
time = "0.3"

# redis
redis = { version = "0.26", default-features = false, features = ["tokio-comp"], optional = true }

# session
actix-session = { version = "0.10", optional = true }

[dev-dependencies]
actix-web = "4"
static_assertions = "1"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
